--- a/packages/deno/runtime-2/tsconfig.json
+++ b/packages/deno/runtime-2/tsconfig.json
@@ -5,6 +5,7 @@
         "jsx": "react",
         "module": "ESNext",
         "target": "ESNext",
+        "baseUrl": "./",
         "types": [],
         "noLib": true,
         "outDir": "lib",
@@ -16,12 +17,34 @@
         "resolveJsonModule": false,
         "allowJs": true,
         "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true
+        "allowImportingTsExtensions": true,
+        "paths": {
+            "ext:deno_broadcast_channel/*": ["./src/ext/broadcast_channel/*"],
+            "ext:deno_cache/*": ["./src/ext/cache/*"],
+            "ext:deno_console/*": ["./src/ext/console/*"],
+            "ext:deno_cron/*": ["./src/ext/cron/*"],
+            "ext:deno_crypto/*": ["./src/ext/crypto/*"],
+            "ext:deno_fetch/*": ["./src/ext/fetch/*"],
+            "ext:deno_ffi/*": ["./src/ext/ffi/*"],
+            "ext:deno_fs/*": ["./src/ext/fs/*"],
+            "ext:deno_http/*": ["./src/ext/http/*"],
+            "ext:deno_io/*": ["./src/ext/io/*"],
+            "ext:deno_kv/*": ["./src/ext/kv/*"],
+            "ext:deno_net/*": ["./src/ext/net/*"],
+            "ext:deno_node/*": ["./src/ext/node/*"],
+            "ext:deno_url/*": ["./src/ext/url/*"],
+            "ext:deno_web/*": ["./src/ext/web/*"],
+            "ext:deno_webgpu/*": ["./src/ext/webgpu/*"],
+            "ext:deno_webidl/*": ["./src/ext/webidl/*"],
+            "ext:deno_websocket/*": ["./src/ext/websocket/*"],
+            "ext:runtime/*": ["./src/runtime/js/*"],
+            "ext:core/*": ["@gjsify/deno-core/*"],
+        },
     },
     "skipLibCheck": true,
     "allowJs": true,
     "checkJs": false,
     "reflection": false,
-    "include": ["@girs/gjs/ambient", "src/core/**/*.ts", "src/ext/**/*.ts", "src/ops/**/*.ts", "src/runtime/**/*.ts", "src/types/**/*.ts", "src/cli/js/*.ts", "src/cli/ops/*.ts", "src/*.ts", "src/cli/tsc/dts/lib.deno.*.d.ts"],
+    "include": ["@girs/gjs/ambient", "src/ext/**/*", "src/runtime/**/*", "src/cli/**/*", "src/*"],
     "exclude": ["node_modules/**/*"]
 }
