--- a/packages/node/process/package.json
+++ b/packages/node/process/package.json
@@ -38,6 +38,7 @@
   ],
   "dependencies": {
     "@girs/gjs": "^3.2.6",
+    "@gjsify/deno_std": "workspace:^",
     "@gjsify/utils": "workspace:^"
   },
   "devDependencies": {
