--- a/packages/node/process/tsconfig.json
+++ b/packages/node/process/tsconfig.json
@@ -9,7 +9,8 @@
     "declarationDir": "lib/types",
     "composite": true,
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true
   },
   "skipLibCheck": true,
   "allowJs": true,
