Add more ops method placeholders

--- a/examples/gio-cat/package.json
+++ b/examples/gio-cat/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@gjsify/example-gio-cat",
+  "private": true,
   "version": "0.0.4",
   "type": "module",
   "module": "dist/index.js",
