--- a/packages/deno/runtime-2/package.json
+++ b/packages/deno/runtime-2/package.json
@@ -36,7 +36,7 @@
         "build:test": "yarn build:test:gjs && yarn build:test:deno",
         "build:test:gjs": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
         "build:test:deno": "gjsify build src/test.ts --app deno --outfile test.deno.js",
-        "sync:dts": "node copy-d-ts-files.mjs",
+        "sync:dts": "deno run tools/copy-d-ts-files.ts",
         "test": "yarn print:name && yarn build:gjsify && yarn build:test && yarn test:gjs && yarn test:deno",
         "test:gjs": "gjs -m test.gjs.js main.ts --location https://example.com/path",
         "test:deno": "deno run --unstable --allow-env --location https://example.com/path test.deno.js",
