generate-deno-op-methods: Add cli options

--- a/packages/infra/generate-deno-op-methods/deno.jsonc
+++ b/packages/infra/generate-deno-op-methods/deno.jsonc
@@ -2,6 +2,8 @@
   "name": "@gjsify/generate-deno-op-methods",
   "version": "0.0.4",
   "tasks": {
-    "start": "deno run --allow-net --allow-read --allow-write --allow-env --allow-ffi --unstable ./mod.ts"
+    "start": "deno run --allow-net --allow-read --allow-write --allow-env --allow-ffi ./mod.ts",
+    "generate:index": "deno run --allow-read --allow-write scripts/generate-index.ts && deno task format",
+    "format": "deno fmt"
   }
 }
