--- a/packages/infra/generate-deno-op-methods/deno.jsonc
+++ b/packages/infra/generate-deno-op-methods/deno.jsonc
@@ -3,6 +3,8 @@
   "version": "0.0.4",
   "tasks": {
     "start": "deno run --allow-net --allow-read --allow-write --allow-env --allow-ffi ./mod.ts",
+    "start:all": "deno task start --dir ../../deno/runtime-2/src --outDir ../../deno/ops",
+    "start:fs": "deno task start --dir ../../deno/runtime-2/src --outDir ../../deno/ops --prefix op_fs_",
     "generate:index": "deno run --allow-read --allow-write scripts/generate-index.ts && deno task format",
     "format": "deno fmt"
   }
